fixed alignment issue

--- a/public/assets/front/css/main.css
+++ b/public/assets/front/css/main.css
@@ -1726,7 +1726,7 @@ overflow: hidden;margin-top: 155px;}
     float: left;
   }
 
-.seller_logo img{    width: 100%;
+.seller_logo img{    width: 103px;
   height: auto;
   display: flex;
   justify-content: center;
